# marketing_chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST_QUESTIONS_roofing_chatbot.md  admin.txt  jar.txt  opencode.json  plat.txt  rough.txt
services/api/: alembic.ini  pyproject.toml
services/api/migrations/: env.py  script.py.mako
services/api/migrations/versions/: 0001_baseline.py  0002_tenants_users.py  0003_tenant_widget_admission.py  0004_tenant_llm_config.py  0005_tenant_llm_base_url.py  0006_tenant_llm_api_version.py  0007_conversations_messages.py  0008_messages_composite_pk.py  0009_conversation_summary.py  0010_knowledge_docs_ingestion_runs.py  0011_knowledge_chunks.py  0012_knowledge_chunks_index.py  0013_knowledge_chunks_fts_index.py  0014_leads.py  0015_lead_activities.py  0016_tenant_crm_configs.py  0017_audit_events.py  0018_scheduling.py  0019_tenant_calendar_configs.py  0020_reminder_jobs.py  0021_notifications.py  0022_message_sources.py  0023_tenant_orchestrator_configs.py  0024_message_decision_grounded.py  0025_message_guardrail_flag.py  0026_notifications_channels.py  0027_orchestrator_turn_cap.py  0028_message_action.py  0029_analytics_indexes.py  0030_client_key_hash.py  0031_tenant_bot_settings.py  0032_client_key_hash_backfill.py  0033_schedule_event_invite_contact.py  0034_schedule_event_source.py  0035_tenant_calendar_scheduling_url.py  0036_calendly_handoff_intents.py
services/api/src/api/: __init__.py  app.py  config.py  edge.py  ratelimit.py  seed.py
services/api/tests/integration/: test_tenant_isolation.py
services/api/tests/unit/: test_admin_repository.py  test_admin_routes.py  test_admin_settings_repository.py  test_admin_settings_routes.py  test_admin_users_repository.py  test_admin_users_routes.py  test_analytics_repository.py  test_analytics_routes.py  test_anthropic_provider.py  test_app.py  test_app_db_init.py  test_audit_repository.py  test_audit_routes.py  test_auth_dependencies.py  test_auth_repository.py  test_auth_routes.py  test_azure_provider.py  test_calendly_webhook.py  test_celery_config.py  test_conversation_admin_routes.py  test_conversation_repository.py  test_conversation_routes.py  test_crm_config.py  test_crm_sync.py  test_crm_tasks.py  test_handoff_intent_repository.py  test_ingestion_chunker.py  test_ingestion_parsers.py  test_ingestion_repository.py  test_ingestion_routes.py  test_ingestion_storage.py  test_ingestion_tasks.py  test_leads_admin_routes.py  test_leads_pipeline.py  test_leads_repository.py  test_leads_routes.py  test_llm_classify_matching.py  test_llm_config.py  test_llm_factory.py  test_llm_provider.py  (+46 more)
services/common/: .env.example  README.md  pyproject.toml
services/common/src/common/: __init__.py  auth.py  cache.py  crypto.py  db.py  errors.py  health.py  logging.py  pgvector.py  postgres_repo.py  ratelimit.py  repository.py  (+2 more)
services/common/tests/: conftest.py
(+303 files in other folders)
