[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-api"
version = "0.1.0"
description = "FastAPI application shell for the chatbot platform."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "chatbot-common",
    "fastapi>=0.111",
    "psycopg2-binary>=2.9",
    "pyjwt>=2.8",
    "redis>=5.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "E501"]

[tool.mypy]
python_version = "3.11"
packages = ["api"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pgvector.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live DB/Redis (deselected if unavailable)",
]
